--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -13,14 +13,14 @@ As the CR particle which is predominantely a proton collides with the nuclei of 
 
 To understand the cascade of particles a detailed modelling of each component is required. These models help extract the basic properties of the cascade. A simplified model describing the electromagnetic component called the Heitler's toy model, its hadronic extension and a generalised cascade equation are all discussed below. The specific development of a neutrino induced EAS is also discussed.  
 
-\subsection*{Heitler's Toy Model}
+\subsection{Heitler's Toy Model}
 \label{sec:Dev_Heitler}
 
 Proposed by Heitler in 1954~\cite{heitler1984quantum}, Heitler's Toy Model is a simplified perfect binary tree to understand and model an EAS development. The model characterises an EAS as a perfect binary tree. In such a scenario all particles produced in a shower equally share the primary energy available at the time of their creation. At each step, which has a fixed size related to radiation length of the medium $\lambda$, the number of particles are supposed to be doubled, with each having the same energy. The energy loses which may occur due to collisions are completely ignored. The shower development or splitting process is supposed to continue till a critical point where the energy required to create more particles becomes the same as energy lost by particles in the medium. At the critical point, the shower has the maximum number of particles given by, $N_{max} = E_0/E_c$, which is the ratio of the original energy ($E_0$) to the critical energy ($E_c$). After this point the shower keeps getting absorbed in the atmosphere. The radiation length at this point is called the shower maximum denoted by $X_{max}$. This can be calculated to be $X_{max} = X_0 + \lambda_r ln(E_0/E_c)$ where $X_0$ is the first interaction point in the atmosphere. A visualisation of the shower development according to the Heitler's model is shown in fig~\ref{}.
 
 Such a simplified model works quite well for estimating the properties of the electromagnetic cascades although the $N_{max}$ estimations do not match perfectly. The reason for this is the difference in the energy loss values for electrons and photons. For hadronic cascades an extension to the model was made. Other important properties of the shower such as lateral and longitudinal spread, also require taking into account the emittance direction and losses due to collision which are not taken into account for a simplified model. These are discussed in sec~\ref{sec:EAS_cha}. Even with its shortcomings the Heitler model gives a very good estimation for electromagnetic cascades and helps clearly categorise an air shower into three phases, the growth phase, the critical point phase and the tail phase. 
 
-\subsection*{Hadronic Extension}
+\subsection{Hadronic Extension}
 \label{sec:Dev_Had}
 The Heitler model was extended by Matthews~\cite{MATTHEWS2005387} to characterise the hadronic cascades in an EAS. In his approximation when a hadron with Energy E interacts with a nucleon the total particles produced have a two-third charged component ($\pi^\pm $) and a one-third neutral component ($\pi^0$) with the initial energy equally divided based on the number fraction. The neutral component decays quickly and contributes its share of energy to the electromagnetic component. The charged hadrons, provided they have not reached their critical energy in air ($\sim$20 GeV), interact again repeating the initial process. Muons are only produced when the charged hadrons acquire an energy below the critical energy. The energy transfer for each component after $n$ generations is given as $E_{had} = \biggl(\frac{2}{3}\biggr)^n E_0$ and $E_{em} = \big[1- \biggl(  \frac{2}{3}\biggr)^n\big] \, E_0$. Deeply penetrating air showers i.e a primary with high energy and a low enough cross-section in air, results in a lower number of muons produced, and observed at ground. This fact is important as based on the ratio of muons to electrons observed at ground, the type of the primary can be estimated. The number of muons ($N_{\mu}$) can be estimated in this model directly from charged hadrons when their energy reaches below the critical energy. For $n$ generations $N_{\mu} = n_{ch}^n$ where $n_{ch}$ are the number of charged hadrons and $n$ can be written as $n = \frac{ln(E_0/E_c)}{ln(n_{tot})}$. Generalising by eliminating generations:
 
@@ -42,10 +42,11 @@ Simulations have shown that the superposition model gives a more realistic descr
 
 Although these models help understand the principle, a full Monte Carlo simulation and a generalised analytical solution of the cascade equations is needed to fully recreate the EAS. Even after such efforts a few discrepancies such as the muon puzzle which is the mismatch in the number of muons predicted by the simulations in comparison to the measurements~\cite{Albrecht_2022_muon_puzzle}.  
 
-\subsection*{LPM effect}
+\subsection{LPM effect}
+\label{subsec:LPM}
 Another process that can directly impact the development of high energy electromagnetic showers since it is the reduction of the bremmstrahlung and the pair-production cross-section is the Landau–Pomeranchuk–Migdal effect~\cite{Landau:1953um,PhysRev.103.1811}. All the above models work under the assumption that the energy range is low enough for the LPM effect to not be applicable. If the medium is dense enough or at high energies the LPM effect also becomes important to fully estimate the development of an air shower. The implications of the LPM effect for air showers implemented in simulations can be found in ~\cite{sandrock2023validationelectromagneticshowerscorsika}. 
 
-\subsection*{Neutrino induced EAS}
+\subsection{Neutrino induced EAS}
 \label{sec:Dev_Nu}
 The development of a neutrino induced shower in comparison to a CR shower is important in the context of this study. Understanding the differences helps to identify the unique signature at a CR observatory like the Pierre Auger. The differences in the shower development can also help increase the sensitivity of a neutrino observatory like the IceCube. Unlike a cosmic ray particle a neutrino can interact at any depth. This is due to the low neutrino cross-section at $10^{18}$ $\approx 10^{-33} \mathrm{cm^2}$  in comparison, for e.g. the proton-nucleon cross-section which is $\approx 10^{-27} \mathrm{cm^2}$. Thus, neutrino-induced showers require significantly higher neutrino energies to produce interactions with observable effects. The main channel via which an ultra-high energy neutrino can interact is either a CC or NC interaction as mentioned in the last chapter. Neutrino-induced showers involve fewer particles in the initial interaction and often have a lower multiplicity of secondary particles compared to CR-induced showers. The development of the shower and the unique signature depend on the flavor of the neutrino as shown in fig~\ref{}.
 
@@ -85,20 +86,20 @@ This feature is a result of the nature of the development of the cascade process
 \label{sec:EAS_det}
 At high energies due to the low flux EAS offer the best way to detect CRs. Low cost ground based detectors can be spread over large areas offering a cost-effective way to study UHECRs. The shower can be seen through different emissions such as the Cherenkov, fluorescence and radio. The particles arriving at ground can also be directly detected. The different emissions which can be detected in context of EAS are described in this section along with an expected EAS signatures of a neutrino induced EAS which relates to the analysis presented in this thesis.
 
-\subsection*{Fluorescence Detection}
+\subsection{Fluorescence Detection}
 \label{sec:EAS_flu}
 The phenomenon of fluorescence emitted by air showers above $10^{17}$eV, known as "atmospheric fluorescence", involves the production of faint optical and ultraviolet (UV) light by the interaction of high-energy particles from extensive air showers with the nitrogen molecules in Earth's atmosphere. The energy levels of the nitrogen molecules determine the wavelengths of light that are emitted. The UV light emitted during the de-excitation process is typically in the near-ultraviolet range. The number of photons emitted directly correlates to the energy deposited by the shower particles. At altitudes between 5 and 10 km, the yield has a height dependent rate of 4-5 photons per meter per charged particle. The photons can be seen at large distances up to 35 km. The measurement of the light intensity through fluorescence telescopes with the help of the geometry of the shower axis offers a way to reconstruct the longitudinal profile of the shower and a subsequent energy estimation of the primary. Fluorescence telescopes are limited in their operational duty cycle which is about 10-15 \% since they can only be operated on clear moonless nights. A proper reconstruction of shower variables via the emitted fluorescence light also requires constant monitoring of the atmosphere to account for light yield corrections. The pioneering fluorescence light detection of EAS include experiments at Volcano Ranch~\cite{1977PhRvL..39..847B} and Fly Eye experiment~\cite{BALTRUSAITIS1985410,BALTRUSAITIS198887}. Currently, this technique is also used at the Pierre Auger Observatory and the Telescope Array (TA).
 
 
-\subsection*{Cherenkov Detection}
+\subsection{Cherenkov Detection}
 \label{sec:EAS_cher}
 Charged particles moving through the atmosphere can also produce Cherenkov light~\cite{Cherenkov:1934ilx}. The EAS can be either detected via Imaging Cherenkov telescopes (IACTs) which can detect showers between 20 GeV -100 TeV or non-imaging Cherenkov detectors can be set up akin to a ground based particle detector array. Both are techniques are used for both gamma-ray astronomy and CR studies. Since the Cherenkov cone is collimated around the shower axis the detectors need to be located with small spacing between them. For e.g. for a particle at 10 km height, the Cherenkov cone has a radius of 120 m. This property and the similar operational limitations akin to the fluorescence detection for the IACTs, makes this technique impractical to detect UHECRs. The currently operational experiments using the non-imaging Cherenkov technique for EAS detection include Yakutsk~\cite{DYAKONOV1986224} and Tunka~\cite{KUZMICHEV2020161830} etc. IACTs are very popular for gamma-ray astronomy and multimessenger detections with H.E.S.S.~\cite{Puhlhofer:2024fjx}, MAGIC~\cite{cortina2009technicalperformancemagictelescopes} and CTA~\cite{2018_CTAO} currently operational. 
 
-\subsection*{Radio Detection}
+\subsection{Radio Detection}
 \label{sec:EAS_rad}
 An EAS traversing through the atmosphere can also produce radio signals. The radio emission can be due to the geomagnetic field~\cite{1966RSPSA.289..206K} or the Askaryan effect~\cite{Askaryan:1961pfb} described before. For air showers the emission due to the geomagnetic effect is supposed to dominate with the Askaryan effect only contributing in the order of 10-15\%~\cite{osti_4100652}. This affect arises due to the deflection of electrons and positrons produced in the shower leading to the formation of an electric dipole moving through the atmosphere at the speed of light. This results in a forward focussed radio signal with a lateral distribution similar to Cherenkov emission. The radio signal depends on the orientation of geomagnetic field and the atmospheric conditions at the detector. Around 100 m from the shower core the expected frequencies are in the MHz range~\cite{Huege_2016} while near the shower core they are in the GHz range. For such frequencies and primary energies >$10^{17}$eV the emissions from the two different mechanisms is superimposed. The measured electric field scales with the primary energy of the shower. Typically, to detect radio emission of an EAS several radio antennas are deployed over a wide surface area. These antennas are triggered by particle detector arrays. Self triggering is also being developed which will make the radio antennas a standalone functional unit for EAS detection. Some e.g. of currently operational radio antenna arrays for EAS detection include LOFAR~\cite{2013A&A...556A...2V} and AERA~\cite{PhysRevD.93.122005}. The Pierre Auger Observatory is also adding a radio antenna on each unit of their particle detector array which is supposed to become operational by 2024. Other planned experiments include GRAND~\cite{fang2017giantradioarrayneutrino}. Neutrino observatories like RNO-G~\cite{Aguilar_2021} and IceCube-Gen-2~\cite{Aartsen_2021_Gen-2} could also potentially detect EAS.  
 
-\subsection*{Particle detector arrays}
+\subsection{Particle detector arrays}
 \label{sec:EAS_particle}
 This is one of the oldest detection techniques used to measure and study CRs. It consists of setting up a set of particle detectors (stations) spaced by large distances, depending on the desired energy range sensitivity of the experiment which is also dependent on the altitude of the experiment. The detectors are usually arranged in a regular pattern, and they are able to detect the secondary particles of EAS at ground by searching for time coincidences between neighbouring stations. By measuring the signal and time delay between the triggered stations the incoming direction of the primary can be estimated to $1-0.5^{\circ}$ of zenith resolution. The core position can also be determined by using the lateral distribution function (eq.~\ref{eq:Lateral_dist_func}) to fit the recorded signal at the surface detector array. The energy can also be estimated through the measurement of number of muons at ground or cross calibration with other detector systems. Different types of detection methods have been used to combine and act as particle detector arrays. These include Geiger counters at Harwell~\cite{1953Natur.171..349G}, hodoscopes at Kiel~\cite{1965ICRC....2..738B}, scintillators at Volcano ranch~\cite{Linsley1961485} and water or ice based Cherenkov detector. Currently, scintillator based surface detector arrays and water OR ice based Cherenkov tanks are the popularly used EAS detection techniques. 
 
@@ -107,7 +108,7 @@ Water/ice based Cherenkov tanks/detectors can also detect the secondary particle
 Scintillator based particle detector arrays can be used to distinguish between the different secondary particles of an EAS. These consist of scintillating material which produced detectable photons if a charged particle traverses through the material. If deployed at the surface, such detectors can act as excellent discriminators for electron and muons whereas if deployed underground they can only detect muons. The size of the scintillating material controls the zenith angle sensitivity which typically decreases as the inclination of the shower increases. TA uses a vast array of scintillator based detectors along with three fluorescence detectors to measure EAS. The Pierre Auger Observatory is also testing an array of underground muon detectors which are situated directly below its surface array stations.
 
 
-\subsection*{Towards detecting Neutrino Induced Extensive Air Showers}
+\subsection{Towards detecting Neutrino Induced Extensive Air Showers}
 \label{sec:EAS_nu}
 Neutrino induced air showers can be differentiated from a regular CR induced EASs by their unique signature. These showers are supposed to start much deeper in the atmosphere in comparison to ordinary CR showers, in particular proton showers which act as the primary background for their detection. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a cosmic ray induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact to induce an EAS if the volume of the atmosphere through which they traverse is large enough, for zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact till they reach the ground or and even if they do, due to the general amount of atmospheric volume at these angles the CR induced EASs are supposed to be indistinguishable from a neutrino shower, at least for a particle detector array at ground. This is due to the fact that the CR induced EASs have not developed enough to significantly reduce or lose their electromagnetic component. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and CR induced EASs. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
 
