--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -74,7 +74,7 @@ The diffuse limit from point source analysis is given as:
   \mathrm{k_{PS}^{90\%CL} < 2.0000 \times 10^{-8} GeV cm^{-2} s^{-1} sr^{-1}}
 \end{equation}
 
-Which agrees with the value mentioned in eq.~\ref{eq:final_lim}. It is also important to mention that even though the overall sensitive declination range for the DG$_{low}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source at between declinations $-80^{\circ}- -68^{\circ}$ then DG$_{low}$ channel offers the only window at Auger to see UHE$\nu_s$ from such a source.  
+Which agrees with the value mentioned in eq.~\ref{eq:final_lim}. It is also important to mention that even though the overall sensitive declination range for the DG$_{low}$ analysis is small in comparison to other channels~\cite{Aab_2019_point}, the improvement presented in this thesis is still important as the sensitive declination ranges are not fully overlapping. Thus, if there is a point source at between declinations $ \delta \in [-80^{\circ}- -68^{\circ}]$ then DG$_{low}$ channel offers the only window at Auger to see UHE$\nu_s$ from such a source.  
 
 
 
