--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -1352,6 +1352,22 @@ abstract = {In this paper we review air shower data related to the mass composit
   year      = {2011},
   month     = aug
 }
+@article{PierreAuger:2014zay,
+  author        = {Aab, Alexander and others},
+  collaboration = {Pierre Auger},
+  title         = {{Muons in Air Showers at the Pierre Auger Observatory: Measurement of Atmospheric Production Depth}},
+  eprint        = {1407.5919},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ex},
+  reportnumber  = {FERMILAB-PUB-14-246-AD-AE-CD-TD},
+  doi           = {10.1103/PhysRevD.90.012012},
+  journal       = {Phys. Rev. D},
+  volume        = {90},
+  number        = {1},
+  pages         = {012012},
+  year          = {2014},
+  note          = {[Addendum: Phys.Rev.D 90, 039904 (2014), Erratum: Phys.Rev.D 92, 019903 (2015)]}
+}
 @article{aaron2010combined,
   title     = {Combined measurement and QCD analysis of the inclusive e$\pm$p scattering cross sections at HERA},
   author    = {Aaron, Francise D and Abramowicz, H and Abt, I and Adamczyk, L and Adamus, M and Martin, Al-daya and Alexa, C and Andreev, V and Antonelli, S and Antonioli, P and others},
