--- a/thesis_skel/thesis_conclusion.tex
+++ b/thesis_skel/thesis_conclusion.tex
@@ -11,22 +11,22 @@
 \label{fig:red_chi2_4}
 \end{figure}
 
-Besides detecting ultra-high-energy (UHE) cosmic rays, the Pierre Auger Observatory with its large Surface Detector(SD) array offers a remarkable exposure to neutrinos above $10^17$eV. Any potential observation of such UHE$\nu_s$ will further our knowledge about the known universe. Since neutrinos are not deflected as they travel towards us at Earth they offer a direct line of sight to the sources where they were produced. They are also some of the earliest particles produced in a transient source which makes their detection an important beacon for other astronomical instruments to perform a multi-messenger observation. The Pierre AUger Observatory is constantly monitoring the sky for the presence of such UHE$\nu_s$. The idea behind the detection remains the same as previous analysis at Auger where the neutrinos are assumed to induce Extensive Air Showers (EASs) close to the ground with a large electro-magnetic component at ground ("young" showers). This strategy is only employed for horizontal showers ($\theta > 60^{\circ}$) Two new SD triggers, time-over-threshold-deconvolved (ToTd) and multiplicity of positive steps (MoPS) were installed in 2014 to further increase the detection efficiency/capability for low energy neutrino induced air showers. This thesis presents the first analysis of this improved efficiency for low energy neutrino showers in the zenith range $\theta [60^{\circ},75^\circ]$ also known as Down-going low or DG$_{Low}$ range. In this thesis the effect of the new triggers is evaluated for two types of searches, the searches for the diffused flux of UHE$\nu_s$ and search for point-like sources of UHE$\nu_s$. For both searches an overall improvement of efficiency is observed when data from new triggers is incorporated in the analysis. A short summary of the three main contributions of this thesis along with an outlook detailing potential improvements are detailed in the next sections. 
-\section*{Incorporating new triggers in the DG$_{low}$ UHE$\nu_s$ searches}
-During this thesis each facet of the DG$_{low}$ analysis was analysed. An effort was made to maximise the potential of the analysis. A blind search strategy similar to~\cite{} was followed to avoid any bias in the analysis. The first step in this process was to include the information from the new triggers in the neutrino searches. About ~7 years of recorded data was available for this task. The effect of the new triggers was first evaluated on neutrino simulations by including them in the analysis chain as described in section~\ref{}. By the inclusion of new triggers an overall increase in reconstructed events was observed as shown in fig~\ref{}. This increase was most significant for lower energy neutrinos and decreased with increase in primary energy. This was an expected consequence due to the design of the new triggers. The overall increase also allowed for further modifications to the analysis which included lowering some stringent cuts as described in ~\ref{}. For the final step of the analysis a Fisher discriminate polynomial was built and trained using the simulations(signal sample) and a small fraction of recorded data, ~20\% from the Observatory (background sample). The polynomial is built with Area over Peaks (AoPs) of the stations and a differentiation between the background and signal is performed based on a cut on the Fisher value as given in eq.~\ref{}. 
-After the fixed selection, A test sample was unblinded to catch any remaining flaws in the analysis. This proved worthwhile as a small error in the reconstruction was discovered during this process. This error was promptly corrected, and the Fisher was retrained. After this correction the rest of the blinded sample, 60\% of recorded data between the period of 1 Jan 2014 to 31 December 2012 was unblinded to search for neutrinos. No neutrino candidates were found using the analysis described in this thesis. 
+Besides detecting ultra-high-energy (UHE) cosmic rays, the Pierre Auger Observatory with its large Surface Detector (SD) array offers a remarkable exposure to neutrinos above $10^{17}$eV. Any potential observation of such UHE$\nu_s$ will further our knowledge about the known universe. Since neutrinos are not deflected as they travel towards us at Earth, they offer a direct line of sight to the sources where they were produced. They are also some of the earliest particles produced in a transient source which makes their detection an important beacon for other astronomical instruments to perform a multi-messenger observation. The Pierre Auger Observatory is constantly monitoring the sky for the presence of such UHE$\nu_s$. The idea behind the detection remains the same as previous analysis at Auger where the neutrinos are assumed to induce Extensive Air Showers (EASs) close to the ground with a large electro-magnetic component at ground ("young" showers). This strategy is only employed for horizontal showers ($\theta > 60^{\circ}$). Two new SD triggers, time-over-threshold-deconvolved (ToTd) and multiplicity of positive steps (MoPS) were installed in 2014 to further increase the detection efficiency/capability for low energy neutrino induced EASs. This thesis presents the first analysis of this improved efficiency for low energy neutrino showers in the zenith range $\theta \in [60^{\circ},75^\circ]$ also known as Down-going low or DG$_{Low}$ range. In this thesis the effect of the new triggers is evaluated for two types of searches, the searches for the diffused flux of UHE$\nu_s$ and search for point-like sources of UHE$\nu_s$. For both searches an overall improvement of efficiency is observed when information from new triggers is incorporated in the analysis. A short summary of the three main contributions of this thesis along with an outlook detailing potential improvements are detailed in the next sections. 
+\section*{Incorporating new triggers in the DG$\mathrm{_{low}}$ UHE$\nu_s$ searches}
+During this thesis each facet of the DG$_{low}$ analysis was analysed. An effort was made to maximise the potential of the analysis. A blind search strategy similar to~\cite{gap_note_2013,Aab_2019_diffuse} was followed to avoid any bias in the analysis. The first step in this process was to include the information from the new triggers in the neutrino searches. About $\sim$7 years of recorded data was available for this task. The effect of the new triggers was first evaluated on neutrino simulations by including them in the analysis chain as described in section~\ref{subsubsec:nu_sel_fisher_training}. By the inclusion of new triggers an overall increase in reconstructed events was observed as shown in fig~\ref{}. This increase was most significant for lower energy neutrinos and decreased with increase in primary energy. This was an expected consequence due to the design of the new triggers. The overall increase also allowed for further modifications to the analysis which included lowering some stringent cuts as described in section~\ref{subsec:nu_sel_nudeteff}. For the final step of the analysis a Fisher discriminate polynomial was built and trained using the simulations (signal sample) and a small fraction of recorded data, $\sim$20\% from the Observatory (background sample). The polynomial is built with Area over Peaks (AoPs) of the stations and a differentiation between the background and signal is performed based on a cut on the Fisher value as given in eq.~\ref{eq:fisher_poly_new}. 
+After the fixing the selection, a test sample was unblinded to catch any remaining flaws in the analysis. This proved worthwhile as a small error in the reconstruction was discovered during this process. The error was promptly corrected, and the whole selection procedure was re-evaluated, and the Fisher was retrained. Due to this change the partially unblinded test sample to be blinded again. After the correction the unblinding was again performed in two stages. The new test sample and the full blinded sample, 20\% + 60\% of recorded data between the period of 1 Jan 2014 to 31 December 2012 was analysed to search for neutrinos. No neutrino candidates were found is the search performed using the analysis described in this thesis. 
 
 \subsection*{Outlook}
-Even though a concerted effort was made to maximize the potential of the analysis presented in this thesis certain improvements could not be implemented and are thus summarized here for future studies. The segmentation algorithm used for reconstruction of events for neutrino searches was found to be not properly tuned for the new triggers ToTd and MoPS. This resulted in new triggers being completely removed from the segmentation algorithm which is useful to decrease the effect of accidental muons which in turn affects the zenith angle estimation. A better tuned segmentation algorithm could thus further improve the neutrino search with new triggers. SOme examples of events where the segmentation algorithm could help are presented in Appendix~\ref{}. This tuning could not be explored in this thesis but could be implemented in the future. In this thesis a cut on the saturated and active PMTs was also explored but not implemented in the final analysis. A detailed study on such a cut could also be useful to increase the efficiency of the analysis. 
+Even though a concerted effort was made to maximise the potential of the analysis presented in this thesis certain improvements could not be implemented and are thus summarized here for future studies. The segmentation algorithm used for reconstruction of events for neutrino searches was found to be not properly tuned for the new triggers, ToTd and MoPS. Thus, for this analysis the new triggers were completely removed from the segmentation algorithm. The primary purpose of the segmentation algorithm is to evaluate the correct start times for the WCD signals to decrease the effect of accidental muons which in turn affects the zenith angle estimation. A better tuned segmentation algorithm could thus further improve the neutrino search with new triggers. Some examples of events where the segmentation algorithm could help are presented in Appendix~\ref{}. This tuning could not be explored in this thesis but could be implemented in the future. In this thesis a cut on the saturated and active PMTs was also explored but not implemented in the final analysis. A detailed study on such a cut could also be useful to increase the efficiency of the analysis.
 
 \section*{Improvements to the diffuse flux limit for UHE$\nu_s$ with new triggers}
-With no neutrino candidate detected a 90\% C.L. upper limit on the diffuse flux of UHE$\nu_s$ for the DG$_{low}$ channel was evaluated. The limit was evaluated under the assumption of a diffuse flux given by $\phi \propto E_{\nu}^-2$ with a 1:1:1 neutrino flavour ratio at earth. The integrated limit is given as:
+With no neutrino candidate detected a 90\% C.L. upper limit on the diffuse flux of UHE$\nu_s$ for the DG$\mathrm{_{low}}$ channel was evaluated. The limit was evaluated under the assumption of a diffuse flux given by $\mathrm{\phi \propto E_{\nu}^-2}$ with a 1:1:1 neutrino flavour ratio at earth. The integrated limit is given as:
 \begin{equation}
     k_{90} < 6.3 x 10^{-17} GeV cm^{-2} s^{-1} sr^{-1},
 \end{equation}
-in the energy range $E_{\nu} \in [1.9 \times 10^{18} - 2.0 \times 10^{20}]$eV. The integrated limit represents the value of the normalisation of the differential flux needed to predict ~2.39 expected events. The number 2.39 was evaluated using a semi Bayesian extension of the Feldman\&Cousins treatment~\cite{} accounting for systematic uncertainties on exposure. This limit is one order stricter than the one obtained without the new triggers for the same time period. Even though this improvement is significant 
+in the energy range $E_{\nu} \in [1.9 \times 10^{18} - 2.0 \times 10^{20}]$eV. The integrated limit represents the value of the normalisation of the differential flux needed to predict $\sim$2.39 expected events. The number 2.39 was evaluated using a semi Bayesian extension of the Feldman \& Cousins treatment accounting for systematic uncertainties on exposure~\cite{Conrad:2002kn}. This limit is one\todo{Correct this and the limit} order stricter than the one obtained without the new triggers for the same time period. Even though this improvement is significant 
 \section*{Improvements to the point source searches for UHE$\nu_s$ with new triggers}
-Further a point sensitivity comparison was also performed to evaluate the performance of the new triggers. The methology was adopted from ~\cite{} and an energy and declination dependent exposure was evaluated for the DG$_{_low}$ range. Using the no neutrino candidate detection ansatz a 90\% C.L. upperlimit on the neutrino flux from point-like sources as a function of source declination, $\delta$ was evaluated and presented in fig.~\ref{}. This limit was also shown to improve with the inclusion of new triggers in fig.~\ref{}. The improvement though small has an impact in the overall sensitivity since the different searches(DG$_low$, DG$_high$, ES) have different FOVs. It must also be stressed that Auger is one of the constantly running experiments sensitive to Energy ranges > $10^{18}$eV thus any improvement to its sensitivity is an important step for the potential future detection of UHE$\nu_s$. 
+Further a point sensitivity comparison was also performed to evaluate the performance of the new triggers. The methology was adopted from ~\cite{Aab_2019_point} and an energy and declination dependent exposure was evaluated for the DG$\mathrm{_{_low}}$ range. Using the no neutrino candidate detection ansatz a 90\% C.L. upperlimit on the neutrino flux from point-like sources as a function of source declination, $\delta$ was evaluated and presented in fig.~\ref{}. This limit was also shown to improve with the inclusion of new triggers in fig.~\ref{}. The improvement though small has an impact in the overall sensitivity since the different searches (DG$_low$, DG$_high$, ES) have different FOVs. It must also be stressed that Auger is one of the constantly running experiments sensitive to Energy ranges > $10^{18}$eV thus any improvement to its sensitivity is an important step for the potential future detection of UHE$\nu_s$.
 
 
 
