Pictures without captions CRnNu

--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -290,6 +290,16 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   pages         = {adc9818},
   year          = {2023}
 }
+@article{PierreAuger:2023pjg,
+  author        = {Abdul Halim, Adila and others},
+  collaboration = {Pierre Auger},
+  title         = {{Latest results from the searches for ultra-high-energy photons and neutrinos at the Pierre Auger Observatory}},
+  doi           = {10.22323/1.444.1488},
+  journal       = {PoS},
+  volume        = {ICRC2023},
+  pages         = {1488},
+  year          = {2023}
+}
 @misc{gap_note_2013,
   year         = {2013},
   url          = {http://hdl.handle.net/10481/26377},
@@ -464,7 +474,40 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   doi       = {10.1103/PhysRev.75.1169},
   url       = {https://link.aps.org/doi/10.1103/PhysRev.75.1169}
 }
-
+@article{Murase:2008sa,
+  author        = {Murase, Kohta and Takami, Hajime},
+  title         = {{Implications of Ultra-High-Energy Cosmic Rays for Transient Sources in the Auger Era}},
+  eprint        = {0810.1813},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph},
+  doi           = {10.1088/0004-637X/690/1/L14},
+  journal       = {Astrophys. J. Lett.},
+  volume        = {690},
+  pages         = {L14--L17},
+  year          = {2009}
+}
+@article{article_Hoshino,
+  author  = {Hoshino, Masahiro},
+  year    = {2001},
+  month   = {05},
+  pages   = {149-181},
+  title   = {Nonthermal Particle Acceleration in Shock Front Region: ``Shock Surfing Accelerations},
+  volume  = {143},
+  journal = {Progress of Theoretical Physics Supplement - PROG THEOR PHYS SUPPL},
+  doi     = {10.1143/PTPS.143.149}
+}
+@article{AlvesBatista:2019tlv,
+  author        = {Alves Batista, Rafael and others},
+  title         = {{Open Questions in Cosmic-Ray Research at Ultrahigh Energies}},
+  eprint        = {1903.06714},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  doi           = {10.3389/fspas.2019.00023},
+  journal       = {Front. Astron. Space Sci.},
+  volume        = {6},
+  pages         = {23},
+  year          = {2019}
+}
 @article{BLASI_2011,
   title     = {COSMIC RAY ACCELERATION IN SUPERNOVA REMNANTS},
   url       = {http://dx.doi.org/10.1142/9789814329033_0061},
@@ -658,7 +701,49 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   doi       = {10.1103/PhysRevLett.79.5202},
   url       = {https://link.aps.org/doi/10.1103/PhysRevLett.79.5202}
 }
-
+@article{PierreAuger:2021tog,
+  author        = {Abreu, Pedro and others},
+  collaboration = {Pierre Auger},
+  title         = {{Testing effects of Lorentz invariance violation in the propagation of astroparticles with the Pierre Auger Observatory}},
+  eprint        = {2112.06773},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-21-716-AD-PPD-SCD-TD, FERMILAB-PUB-21-716-AD-PPD-SCD-TD},
+  doi           = {10.1088/1475-7516/2022/01/023},
+  journal       = {JCAP},
+  volume        = {01},
+  number        = {01},
+  pages         = {023},
+  year          = {2022}
+}
+@article{XENON:2023cxc,
+  author        = {Aprile, E. and others},
+  collaboration = {XENON},
+  title         = {{First Dark Matter Search with Nuclear Recoils from the XENONnT Experiment}},
+  eprint        = {2303.14729},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ex},
+  doi           = {10.1103/PhysRevLett.131.041003},
+  journal       = {Phys. Rev. Lett.},
+  volume        = {131},
+  number        = {4},
+  pages         = {041003},
+  year          = {2023}
+}
+@article{LZ:2022lsv,
+  author        = {Aalbers, J. and others},
+  collaboration = {LZ},
+  title         = {{First Dark Matter Search Results from the LUX-ZEPLIN (LZ) Experiment}},
+  eprint        = {2207.03764},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ex},
+  doi           = {10.1103/PhysRevLett.131.041002},
+  journal       = {Phys. Rev. Lett.},
+  volume        = {131},
+  number        = {4},
+  pages         = {041002},
+  year          = {2023}
+}
 @article{PhysRevLett.16.748,
   title     = {End to the Cosmic-Ray Spectrum?},
   author    = {Greisen, Kenneth},
@@ -695,6 +780,15 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   url      = {https://www.sciencedirect.com/science/article/pii/S1631070514000541},
   author   = {Karl-Heinz Kampert and Peter Tinyakov},
   keywords = {UHECR, Energy spectrum, Mass composition, Anisotropy, Rayons cosmiques, Composition masse, Anisotropie},
+}
+@misc{evoli_2018_2360277,
+  author    = {Evoli, Carmelo},
+  title     = {The Cosmic-Ray Energy Spectrum},
+  month     = dec,
+  year      = 2018,
+  publisher = {Zenodo},
+  doi       = {10.5281/zenodo.2360277},
+  url       = {https://doi.org/10.5281/zenodo.2360277}
 }
 @article{kawai2008telescope,
   title     = {Telescope array experiment},
@@ -927,6 +1021,21 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   abstract       = {The Pierre Auger Observatory, which is the largest air-shower experiment in the world, offers unprecedented exposure to neutral particles at the highest energies. Since the start of data collection more than 18 years ago, various searches for ultra-high-energy (UHE, E≳1017eV) photons have been performed, either for a diffuse flux of UHE photons, for point sources of UHE photons or for UHE photons associated with transient events such as gravitational wave events. In the present paper, we summarize these searches and review the current results obtained using the wealth of data collected by the Pierre Auger Observatory.},
   doi            = {10.3390/universe8110579}
 }
+@article{PierreAuger:2024ayl,
+  author        = {Abdul Halim, A. and others},
+  collaboration = {Pierre Auger},
+  title         = {{Search for photons above 1018\,\,eV by simultaneously measuring the atmospheric depth and the muon content of air showers at the Pierre Auger Observatory}},
+  eprint        = {2406.07439},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-24-0391-PPD-TD},
+  doi           = {10.1103/PhysRevD.110.062005},
+  journal       = {Phys. Rev. D},
+  volume        = {110},
+  number        = {6},
+  pages         = {062005},
+  year          = {2024}
+}
 @article{10.1063/1.2995181,
   author   = {Brown, Laurie M.},
   title    = {{The idea of the neutrino}},
@@ -1083,6 +1192,19 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   archiveprefix = {arXiv},
   primaryclass  = {astro-ph.CO},
   url           = {https://arxiv.org/abs/2402.16243}
+}
+@article{SajjadAthar:2021prg,
+  author        = {Sajjad Athar, Mohammad and others},
+  title         = {{Status and perspectives of neutrino physics}},
+  eprint        = {2111.07586},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  reportnumber  = {FERMILAB-PUB-21-621-ND},
+  doi           = {10.1016/j.ppnp.2022.103947},
+  journal       = {Prog. Part. Nucl. Phys.},
+  volume        = {124},
+  pages         = {103947},
+  year          = {2022}
 }
 @article{10.1143/PTP.28.870,
   author   = {Maki, Ziro and Nakagawa, Masami and Sakata, Shoichi},
@@ -1250,6 +1372,20 @@ abstract = {In this paper we review air shower data related to the mass composit
   journal       = {JCAP},
   volume        = {01},
   pages         = {002},
+  year          = {2019}
+}
+@article{Heinze:2019jou,
+  author        = {Heinze, Jonas and Fedynitch, Anatoli and Boncioli, Denise and Winter, Walter},
+  title         = {{A new view on Auger data and cosmogenic neutrinos in light of different nuclear disintegration and air-shower models}},
+  eprint        = {1901.03338},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {DESY-19-016},
+  doi           = {10.3847/1538-4357/ab05ce},
+  journal       = {Astrophys. J.},
+  volume        = {873},
+  number        = {1},
+  pages         = {88},
   year          = {2019}
 }
 @article{10.1111/j.1365-2966.2008.13366.x,
